# ur_icam

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ur_icam_description/: CMakeLists.txt  package.xml
ur_icam_description/launch/: display_with_gripper_and_cube.launch  rviz.launch  rviz_avec_publisher.launch  ur_avec_camera.launch  ur_avec_camera_et_objets.launch  ur_camera_vacuum_gripper.launch  ur_camera_vacuum_gripper_objets.launch  webcam_gazebo.launch
ur_icam_description/scripts/: node_camera.py  node_create_objects.py  node_get_image.py  node_move_cartesian.py  node_pyqt_interact_robot.py  node_robotiq85_gripper.py  node_stack_cubes.py  node_test_collision_moveit.py  node_vacuum_gripper_set.py
ur_icam_description/src/ur_icam/: camera.py  reglage.py  robotUR.py  vacuum_gripper_set.py
ur_icam_description/src/ur_icam_description/: camera.py  gripper.py  robotUR.py  vacuum_gripper_set.py
ur_icam_description/urdf/: mon_ur5.urdf  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
ur_icam_gazebo/: CMakeLists.txt  package.xml  setup.py
ur_icam_gazebo/launch/: controller_utils.launch  ur5.launch  ur5_controllers.launch  ur5_cubes.launch  ur5_setup.launch
ur_icam_gazebo/worlds/: env_test_webcam.world  ur5_cubes.world  ur5_setup.world
ur_icam_moveit_config/: CMakeLists.txt  package.xml
ur_icam_moveit_config/config/: ur5_robotiq85.srdf
ur_icam_moveit_config/launch/: move_group.launch  planning_context.launch  ur5_moveit_planning_execution.launch
